# Sub-directories
SUBDIRS= \
	app \
	ast \
	cache \
	data \
	dcache \
	cfg \
	cpp \
	dfa \
	display \
	ets \
	exegraph \
	flowfact \
	graph \
	hard \
	hardware \
	ilp \
	ipet \
	loader \
	parexegraph \
	pcg \
	proc \
	prog \
	prop \
	script \
	sim \
	util


# Headers
includeotawadir=$(includedir)/otawa
includeotawa_HEADERS = \
	sim.h \
	ast.h \
	base.h  \
	cfg.h \
	ets.h\
	gliss.h \
	hard.h \
	ilp.h \
	instruction.h \
	ipet.h \
	manager.h \
	otawa.h \
	platform.h \
	program.h \
	properties.h \
	type.h \
	pcg.h

